--- a/views/res_config_settings_views.xml
+++ b/views/res_config_settings_views.xml
@@ -7,7 +7,7 @@
         <field name="inherit_id" ref="website.res_config_settings_view_form"/>
         <field name="arch" type="xml">
             <xpath expr="//form" position="inside">
-                <app data-string="ElevenLabs AI" string="ElevenLabs AI" name="elevenlabs_ai">
+                <app data-string="ElevenLabs AI" string="ElevenLabs AI" name="elevenlabs_agent">
                     <block title="ElevenLabs AI Assistant" name="elevenlabs_ai_settings">
                         <setting help="Enable the AI shopping assistant powered by ElevenLabs on your website">
                             <field name="elevenlabs_enabled"/>
