--- a/views/assets.xml
+++ b/views/assets.xml
@@ -2,7 +2,11 @@
 <odoo>
     <!-- Define custom asset bundle for ElevenLabs -->
     <template id="elevenlabs_assets" name="ElevenLabs Agent Assets">
+        <!-- Swiper CSS -->
+        <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css"/>
         <link rel="stylesheet" type="text/css" href="/elevenlabs_agent/static/src/css/elevenlabs_agent.css?v=2.0"/>
+        <!-- Swiper JS -->
+        <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"/>
         <script type="text/javascript" src="/elevenlabs_agent/static/src/js/elevenlabs_checkout_handlers.js?v=2.0"/>
         <script type="text/javascript" src="/elevenlabs_agent/static/src/js/elevenlabs_widget.js?v=2.0"/>
     </template>
